--- a/index.html
+++ b/index.html
@@ -1,33 +1,61 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
-    <title>Lance Dudkowski UX Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-  </head>
-  <body class="bodyGrid">
-    <div class="logo">
-      <img class="ld-logo" src="images/LD-Logo-Blue.png">
-    </div>
-    <div class="navigationBar">
-      <ul class="nav">
-        <li class="navItem">PORTFOLIO</li>
-        <li class="navItem">ABOUT ME</li>
-        <li class="navItem">CONTACT</li>
-        <li class="navItem">RESUME</li>
-      </ul>
-      <!-- <line x1="0" y1="100" x2="200" y2="100" style="stroke: #199FFF;stroke-width:2"/> -->
-    </div>
-    <div>
- <!-- white space -->
-    </div> 
 
-    <div class="contentArea">
-      <h1 id="title">Resume</h1>
-    </div>
+<head>
+  <title>Lance Dudkowski UX Portfolio</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
 
-  </body>
+<body>
+  <nav>
+    <div class="navGrid">
+      <div class="logo">
+        <img class="ld-logo" src="images/LD-Logo-Blue.png">
+      </div>
+      <div class="navigationBar">
+        <ul class="navList">
+          <li class="navItem">PORTFOLIO</li>
+          <li class="navItem">ABOUT ME</li>
+          <li class="navItem">CONTACT</li>
+          <li class="navItem">RESUME</li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="contentArea">
+    <h1 id="title">Resume</h1>
+    <p>Excited and dependable UX Designer, with an Industrial Design background, seeking to bring the WOW factor and a
+      smile to the user’s face. Over the last few years, I have enjoyed how Industrial Design can positively affect the
+      way people perceive a product and how I brought that initial concept to life. Crossing over to UX is the next
+      logical step to test and apply my creativity and design skills to continually add good design in the world.</p>
+    <h2>Professional Experience</h2>
+    <p></p>
+    <h2>Projects</h2>
+    <p></p>
+    <h2>Education</h2>
+    <p><b>Certificate, UX/UI Boot Camp</b> <br>
+      Georgia Institute of Technology, Atlanta, GA — 2020 <br><br>      
+      <b>BS, Industrial Design</b> <br>
+      Georgia Institute of Technology, Atlanta, GA — 2011
+      </p>
+    <h2>Skills</h2>
+    <p></p>
+    <h2>Honors</h2>
+    <p><b>AT&T Digital Life</b> <br>
+      ROCKET Award — “For outstanding performance” — May 2014 & May 2015 <br><br>
+      <b>Georgia Institute of Technology</b> <br>
+      Co-Inventor, Patent US9481389B2; Convertible Jogging and All-Terrain Strollers, 2015
+      </p>
+  </div>
+  <div class="buttonContainer">
+    <button>Download</button>
+    <button>Contact me</button>
+  </div>
   <footer>
     <ul>
       <li class="footerItem">PORTFOLIO</li>
@@ -36,5 +64,6 @@
       <li class="footerItem">RESUME</li>
     </ul>
   </footer>
+</body>
 
 </html>
