--- a/index.html
+++ b/index.html
@@ -34,27 +34,64 @@
       way people perceive a product and how I brought that initial concept to life. Crossing over to UX is the next
       logical step to test and apply my creativity and design skills to continually add good design in the world.</p>
     <h2>Professional Experience</h2>
-    <p></p>
+      <ul class="jobList">
+        <li class="noBullets"><b>CAD Designer</b>, Pulseworks, LLC, Smyrna, GA </li>
+        <li class="noBullets"><i>March 2017 – Present </i></li>
+        <li>Models 3D CAD assemblies of site concepts for our simulators and their enclosures per client wants and needs.</li>
+        <li>Manages timeline of new build production and installation to hit designated deadlines.</li>
+      </ul>
+      <ul class="jobList" id="lastJob">
+        <li class="noBullets"><b>Industrial Designer</b>, AT&T Digital Life, Atlanta, GA </li>
+        <li class="noBullets"><i>June 2013 – December 2016</i></li>
+        <li>Pioneered designs from initial sketch to manufactured prototype for home security and automation ecosystem, focusing on the user’s experience and interactions with his or her smart home. </li>
+        <li>Collaborated with Marketing, Operations, and Product Development teams to define new features, installation methods, and interactions.</li>
+      </ul>
     <h2>Projects</h2>
-    <p></p>
+    <p><b>Cut n’ Run App</b> – Mobile Haircut app designed for Android bringing the hair care specialists to the user when he or she cannot go to a salon or barber. Software used: Adobe XD, Miro, InVision.
+      <br><br><b>Relaxination App</b> – Mobile app created to locate and book relaxing places or activities when traveling to unfamiliar places based on locals’ and tourists’ recommendations. Software used: Adobe XD, Miro, InVision.
+     <br> <br> <b>NSA Website Redesign</b> – Government website redesign for the National Security Agency to improve the information architecture and aesthetics. Software used: Adobe XD, Miro, InVision.
+      </p>
     <h2>Education</h2>
-    <p><b>Certificate, UX/UI Boot Camp</b> <br>
+    <p><b>Certificate, User Experience/User Interface Boot Camp</b> <br>
       Georgia Institute of Technology, Atlanta, GA — 2020 <br><br>      
-      <b>BS, Industrial Design</b> <br>
+      <b>Bachelor of Science, Industrial Design</b> <br>
       Georgia Institute of Technology, Atlanta, GA — 2011
       </p>
     <h2>Skills</h2>
-    <p></p>
+    <div class="skills">
+      <ul class="skillsList">
+        <li>UX Design</li>
+        <li>UI Design</li>
+        <li>Interaction Design</li>
+        <li>Research Analysis</li>
+      </ul>
+    </div>
+    <div class="skills">  
+      <ul class="skillsList">
+        <li>Rapid Prototyping</li>
+        <li>Heuristic Evaluation</li>
+        <li>Competitor Analysis</li>
+        <li>Wire Framing</li>
+      </ul>
+    </div>
+    <div class="skills">
+      <ul class="skillsList">
+        <li>Miro</li>	
+        <li>Adobe XD</li>
+        <li>HTML/CSS</li>
+        <li>CAD Modeling</li>
+      </ul>
+    </div>
     <h2>Honors</h2>
     <p><b>AT&T Digital Life</b> <br>
       ROCKET Award — “For outstanding performance” — May 2014 & May 2015 <br><br>
       <b>Georgia Institute of Technology</b> <br>
       Co-Inventor, Patent US9481389B2; Convertible Jogging and All-Terrain Strollers, 2015
       </p>
-  </div>
-  <div class="buttonContainer">
-    <button>Download</button>
-    <button>Contact me</button>
+    <div class="buttonContainer">
+      <button>Download</button>
+      <button>Contact me</button>
+    </div>
   </div>
   <footer>
     <ul>
