--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <li class="noBullets"><i>June 2013 – December 2016</i></li>
         <li>Pioneered designs from initial sketch to manufactured prototype for home security and automation ecosystem, focusing on the user’s experience and interactions with his or her smart home. </li>
         <li>Collaborated with Marketing, Operations, and Product Development teams to define new features, installation methods, and interactions.</li>
+        <li>Improved product readiness to market 30% by providing Operations and Product Development teams with in-house rapid prototyping, industrial design, and 3D CAD modeling services.
+        <li>Increased AT&T Digital Life’s Net Promoter Score with new product design language.</li>
+          </li>
       </ul>
     <h2>Projects</h2>
     <p><b>Cut n’ Run App</b> – Mobile Haircut app designed for Android bringing the hair care specialists to the user when he or she cannot go to a salon or barber. Software used: Adobe XD, Miro, InVision.
